--- a/index.html
+++ b/index.html
@@ -40,18 +40,21 @@
 			<br>
 			<div class="one">
 				<a class="title personal" href="https://lie771.github.io/personal-journey/index.html">personal journey</a>
+				<img src="/img/cursor.png">
 			</div>
 			<br>
 			<div class="one">
 				<a class="title personalarchive" href="https://lie771.github.io/personal-journey-archive/index.html">personal journey archive</a>
+				<img src="/img/cursor.png">
 			</div>
 			<div class="one">
 				<a class="title coding" href="https://lie771.github.io/coding-from-life=/index.html">coding from life</a>
+				<img src="/img/cursor.png">
 			</div>
 			<div class="one">
 				<a class="title codingarchive" href="https://lie771.github.io/coding-from-life-archive/index.html">coding from life archive</a>
+				<img src="/img/cursor.png">
 			</div>
-		<div class="custom"></div>
 		</div>
 	</body>
 </html>
