--- a/coding-from-life-archive/threeimensionpage3.html
+++ b/coding-from-life-archive/threeimensionpage3.html
@@ -11,7 +11,7 @@
 	<div id="wrapper">
     <a href="index.html"><div class="home">CODING <br>FROM LIFE</div></a>
     <a href="https://yangmaya.github.io/coding-from-life/index.html"><p class="yangchen2 names2">yangchen gruben</p>
-    <a href="https://chikh538.github.io/coding-from-life/index.html"><p class="kristen2 names2">kristen chik</p>
+    <a href="https://chikh538.github.io/code-from-life/index.html"><p class="kristen2 names2">kristen chik</p>
 	</div>
 </body>
 </html>
