--- a/index.html
+++ b/index.html
@@ -35,25 +35,29 @@
 		<div class="projects">
 			<div class="one">
 				<a class="title click" href="https://lie771.github.io/click-click/index.html">click click</a>
-				<img src="img/cursor.png">
+				<img class="a" src="img/cursor.png">
 			</div>
 			<br>
 			<div class="one">
 				<a class="title personal" href="https://lie771.github.io/personal-journey/index.html">personal journey</a>
-				<img src="img/cursor.png">
+				<img class="b" src="img/cursor.png">
 			</div>
 			<br>
 			<div class="one">
 				<a class="title personalarchive" href="https://lie771.github.io/personal-journey-archive/index.html">personal journey archive</a>
-				<img src="img/cursor.png">
+				<img class="c" src="img/cursor.png">
 			</div>
 			<div class="one">
 				<a class="title coding" href="https://lie771.github.io/coding-from-life/index.html">coding from life</a>
-				<img src="img/cursor.png">
+				<img class="d" src="img/cursor.png">
 			</div>
 			<div class="one">
 				<a class="title codingarchive" href="https://lie771.github.io/coding-from-life-archive/index.html">coding from life archive</a>
-				<img src="img/cursor.png">
+				<img class="e" src="img/cursor.png">
+			</div>
+			<div class="one">
+				<a class="title archive" href="https://lie771.github.io/archive/index.html">archive project</a>
+				<img class="f" src="img/cursor.png">
 			</div>
 		</div>
 	</body>
