Fixed Horizontal And Vertical Scroll

--- a/masterpiece/index.html
+++ b/masterpiece/index.html
@@ -12,16 +12,73 @@
 <body>
   <div id="content">
     <img class="usfixed" src="./img/usfixed.png">
-    <div class="usscrollgroupwhole">
-          <div class="usscroll1"><img src="./img/us7.png"></div>
+    <div class="yuanscrollgroupwhole">
+       <div class="yuanscroll">
+            <div class="yuanscrollimage yuanscroll1image"><img src="./img/yuanhorizon1.png"><div class="hstrokes1"></div></div>
+      </div>
+      <div class="yuanscroll">
+            <div class="yuanscrollimage yuanscroll1image"><img src="./img/yuanhorizon3.jpg"><div class="hstrokes1"></div></div>
+      </div>
+      <div class="yuanscroll">
+            <div class="yuanscrollimage yuanscroll1image"><img src="./img/yuanhorizon5.jpg"><div class="hstrokes1"></div></div>
+      </div>
+      <div class="yuanscroll">
+            <div class="yuanscrollimage yuanscroll1image"><img src="./img/yuanhorizon7.jpg"><div class="hstrokes1"></div></div>
+      </div>
+      <div class="yuanscroll">
+            <div class="yuanscrollimage yuanscroll1image"><img src="./img/yuanhorizon9.jpg"><div class="hstrokes1"></div></div>
+      </div>
+      <div class="yuanscroll">
+            <div class="yuanscrollimage yuanscroll1image"><img src="./img/yuanhorizon11.jpg"><div class="hstrokes1"></div></div>
+      </div>
     </div>
-<!--     <div class="usscrollgroup">
-      <img class="usscroll usone" src="./img/us1.png">
-      <img class="usscroll ustwo" src="./img/us2.png">
-      <img class="usscroll usthree" src="./img/us3.png">
-      <img class="usscroll usfour" src="./img/us4.png">
-      <img class="usscroll usfive" src="./img/us5.png">
+    <div class="usscrollgroupwhole">
+          <div class="usscroll usscroll1">
+            <div class="usscrollimage usscroll1image">
+              <img src="./img/us1.png"><img src="./img/yuan2.jpg">
+              <div class="vstrokes1"></div>
+            </div>
+          </div>
+          <div class="usscroll usscroll1">
+            <div class="usscrollimage usscroll2image">
+                <img src="./img/us2.png">
+                <img class="yuanscrollimage" src="./img/yuan4.jpg">
+                <div class="vstrokes1"></div>
+            </div>
+          </div>
+          <div class="usscroll usscroll1">
+            <div class="usscrollimage usscroll3image"><img src="./img/us3.png"><img class="yuanvert" src="./img/yuan6.jpg"></div>
+          </div>
+          <div class="usscroll usscroll1">
+            <div class="usscrollimage usscroll4image"><img src="./img/us4.png"><img src="./img/yuan8.jpg"></div>
+          </div>
+          <div class="usscroll usscroll1">
+            <div class="usscrollimage usscroll3image"><img src="./img/us5.png"><img src="./img/yuan10.jpg"></div>
+          </div>
+          <div class="usscroll usscroll1">
+            <div class="usscrollimage usscroll5image"><img src="./img/us6.png"><img src="./img/yuan12.jpg"></div>
+          </div>
+          <div class="usscroll usscroll1">
+            <div class="usscrollimage usscroll6image"><img src="./img/us7.png"><img src="./img/yuan14.jpg"></div>
+          </div>
+          <div class="usscroll usscroll1">
+            <div class="usscrollimage usscroll6image"><img src="./img/us8.png"><img src="./img/yuan16.jpg"></div>
+          </div>
+          <div class="usscroll usscroll1">
+            <div class="usscrollimage usscroll5image"><img src="./img/us9.png"><img src="./img/yuan18.jpg"></div>
+          </div>
+          <div class="usscroll usscroll1">
+            <div class="usscrollimage usscroll5image"><img src="./img/us10.png"><img src="./img/yuan20.jpg"></div>
+          </div>
+          <div class="usscroll usscroll1">
+            <div class="usscrollimage usscroll7image"><img src="./img/us11.png"><img src="./img/yuan22.jpg"></div>
+          </div>
+    </div>
+<!--     <div class="hstrokes">
+      <div class="hstrokes1"></div>
+
     </div> -->
+
   </div>
 </body>
 </html>
