--- a/masterpiece/index.html
+++ b/masterpiece/index.html
@@ -47,38 +47,76 @@
             </div>
           </div>
           <div class="usscroll usscroll1">
-            <div class="usscrollimage usscroll3image"><img src="./img/us3.png"><img class="yuanvert" src="./img/yuan6.jpg"></div>
+            <div class="usscrollimage usscroll3image">
+              <img src="./img/us3.png">
+              <img class="yuanvert" src="./img/yuan6.jpg">
+              <div class="vstrokes1"></div>
+            </div>
           </div>
           <div class="usscroll usscroll1">
-            <div class="usscrollimage usscroll4image"><img src="./img/us4.png"><img src="./img/yuan8.jpg"></div>
+            <div class="usscrollimage usscroll4image">
+              <img src="./img/us4.png">
+              <img src="./img/yuan8.jpg">
+              <div class="vstrokes1"></div>
+            </div>
           </div>
           <div class="usscroll usscroll1">
-            <div class="usscrollimage usscroll3image"><img src="./img/us5.png"><img src="./img/yuan10.jpg"></div>
+            <div class="usscrollimage usscroll3image">
+              <img src="./img/us5.png">
+              <img src="./img/yuan10.jpg">
+              <div class="vstrokes1"></div>
+            </div>
           </div>
           <div class="usscroll usscroll1">
-            <div class="usscrollimage usscroll5image"><img src="./img/us6.png"><img src="./img/yuan12.jpg"></div>
+            <div class="usscrollimage usscroll5image">
+              <img src="./img/us6.png">
+              <img src="./img/yuan12.jpg">
+              <div class="vstrokes1"></div>
+            </div>
           </div>
           <div class="usscroll usscroll1">
-            <div class="usscrollimage usscroll6image"><img src="./img/us7.png"><img src="./img/yuan14.jpg"></div>
+            <div class="usscrollimage usscroll6image">
+              <img src="./img/us7.png">
+              <img src="./img/yuan14.jpg">
+              <div class="vstrokes1"></div>
+            </div>
           </div>
           <div class="usscroll usscroll1">
-            <div class="usscrollimage usscroll6image"><img src="./img/us8.png"><img src="./img/yuan16.jpg"></div>
+            <div class="usscrollimage usscroll6image">
+              <img src="./img/us8.png">
+              <img src="./img/yuan16.jpg">
+              <div class="vstrokes1"></div>
+            </div>
           </div>
           <div class="usscroll usscroll1">
-            <div class="usscrollimage usscroll5image"><img src="./img/us9.png"><img src="./img/yuan18.jpg"></div>
+            <div class="usscrollimage usscroll5image">
+              <img src="./img/us9.png">
+              <img src="./img/yuan18.jpg">
+              <div class="vstrokes1"></div>
+            </div>
           </div>
           <div class="usscroll usscroll1">
-            <div class="usscrollimage usscroll5image"><img src="./img/us10.png"><img src="./img/yuan20.jpg"></div>
+            <div class="usscrollimage usscroll5image">
+              <img src="./img/us10.png">
+              <img src="./img/yuan20.jpg">
+            <div class="vstrokes1"></div>
+          </div>
           </div>
           <div class="usscroll usscroll1">
-            <div class="usscrollimage usscroll7image"><img src="./img/us11.png"><img src="./img/yuan22.jpg"></div>
+            <div class="usscrollimage usscroll7image">
+              <img src="./img/us11.png">
+              <img src="./img/yuan22.jpg">
+              <div class="vstrokes1"></div>
+          </div>
           </div>
     </div>
-<!--     <div class="hstrokes">
-      <div class="hstrokes1"></div>
-
-    </div> -->
-
+    <div class="para">
+        <p class="artname">Weaving Myth VI: U.S. vs China from Flying Rug series</p>
+        <p class="year"> 2013</p>
+        <p class="artist">Abdullah M. I. Syed</p>
+        <br>
+        <p class="dimension">24.5 × 15.0 × 13.5 Size (cm)</p>
+    </div>
   </div>
 </body>
 </html>
