Fix Dimension And Update Home

--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
 				<a class="title archive" href="https://lie771.github.io/archive/index.html">archive project</a>
 				<img class="f" src="img/cursor.png">
 			</div>
+			<div class="one">
+				<a class="title masterpiece" href="https://lie771.github.io/masterpiece/index.html">masterpiece</a>
+				<img class="f" src="img/cursor.png">
+			</div>
 		</div>
 	</body>
 </html>
