--- a/masterpiece/index.html
+++ b/masterpiece/index.html
@@ -6,7 +6,7 @@
     <link href='./css/reset.css' media='all' rel='stylesheet' type='text/css' />
     <link href='./css/main.css' media='all' rel='stylesheet' type='text/css' />
     <link rel="icon" href="./img/favicon.png" type="image/x-icon" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.minm.js"></script>
     <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
