--- a/index.html
+++ b/index.html
@@ -62,6 +62,17 @@
 			<div class="one">
 				<a class="title masterpiece" href="https://lie771.github.io/masterpiece/index.html">masterpiece</a>
 				<img class="f" src="img/cursor.png">
+			<div class="one">
+				<a class="title java" href="https://lie771.github.io/java-assignment/index.html">javascript activity</a>
+				<img class="f" src="img/cursor.png">
+			</div>
+			<div class="one">
+				<a class="title jquery" href="https://lie771.github.io/jquery-activity/index.html">jquery activity</a>
+				<img class="f" src="img/cursor.png">
+			</div>
+			<div class="one">
+				<a class="title prototype" href="https://lie771.github.io/quick_prototyping/index.html">quick prototype</a>
+				<img class="f" src="img/cursor.png">
 			</div>
 		</div>
 	</body>
