--- a/dream_vaca/index.html
+++ b/dream_vaca/index.html
@@ -9,12 +9,12 @@
     <script src="main.js"></script>
 </head>
 <body>
-<!--   <img class="icecream one" src="./img/a.png">
+  <img class="icecream one" src="./img/a.png">
   <img class="icecream two" src="./img/b.png">
   <img class="icecream three" src="./img/c.png">
   <img class="icecream four" src="./img/d.png">
   <img class="icecream five" src="./img/e.png">
-  <img class="icecream six" src="./img/f.png"> -->
-  <div id="move">Catch Me!</div>
+  <img class="icecream six" src="./img/f.png">
+<!--   <div id="move">Catch Me!</div> -->
 </body>
 </html>
