--- a/dream_vaca/index.html
+++ b/dream_vaca/index.html
@@ -6,15 +6,16 @@
     <link href='./css/reset.css' media='all' rel='stylesheet' type='text/css' />
     <link href='./css/main.css' media='all' rel='stylesheet' type='text/css' />
 <!--     <link rel="icon" href="./img/favicon.png" type="image/x-icon" /> -->
-    <script src="main.js"></script>
 </head>
 <body>
   <img class="icecream one" src="./img/a.png">
-  <img class="icecream two" src="./img/b.png">
+<!--   <img class="icecream two" src="./img/b.png">
   <img class="icecream three" src="./img/c.png">
   <img class="icecream four" src="./img/d.png">
   <img class="icecream five" src="./img/e.png">
-  <img class="icecream six" src="./img/f.png">
+  <img class="icecream six" src="./img/f.png"> -->
 <!--   <div id="move">Catch Me!</div> -->
+  <script src="jquery-3.2.1.min.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
