--- a/dream_vaca/index.html
+++ b/dream_vaca/index.html
@@ -8,13 +8,7 @@
 <!--     <link rel="icon" href="./img/favicon.png" type="image/x-icon" /> -->
 </head>
 <body>
-  <img class="icecream one" src="./img/a.png">
-<!--   <img class="icecream two" src="./img/b.png">
-  <img class="icecream three" src="./img/c.png">
-  <img class="icecream four" src="./img/d.png">
-  <img class="icecream five" src="./img/e.png">
-  <img class="icecream six" src="./img/f.png"> -->
-<!--   <div id="move">Catch Me!</div> -->
+  <img id="icecream" src="a.png">
   <script src="jquery-3.2.1.min.js"></script>
   <script src="main.js"></script>
 </body>
