Fail If Statement

--- a/dream_vaca/index.html
+++ b/dream_vaca/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Weaving Myth </title>
+  <title>Catch Me</title>
     <meta charset="utf-8">  
     <link href='./css/reset.css' media='all' rel='stylesheet' type='text/css' />
     <link href='./css/main.css' media='all' rel='stylesheet' type='text/css' />
