Added New Image Array

--- a/dream_vaca/index.html
+++ b/dream_vaca/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <img id="icecream" src="a.png">
+  <div class="title">catch me if you can</div>
   <script src="jquery-3.2.1.min.js"></script>
   <script src="main.js"></script>
 </body>
