--- a/dream_vaca/index.html
+++ b/dream_vaca/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">  
     <link href='./css/reset.css' media='all' rel='stylesheet' type='text/css' />
     <link href='./css/main.css' media='all' rel='stylesheet' type='text/css' />
+    <link rel="icon" href="./img/favicon.png" type="image/x-icon" />
 <!--     <link rel="icon" href="./img/favicon.png" type="image/x-icon" /> -->
 </head>
 <body>
