--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
 				<a class="title prototype" href="https://lie771.github.io/quick_prototyping/index.html">quick prototype</a>
 				<img class="f" src="img/cursor.png">
 			</div>
+			<div class="one">
+				<a class="title dream" href="https://lie771.github.io/dream_vaca/index.html">dream vacation</a>
+				<img class="f" src="img/cursor.png">
+			</div>
 		</div>
 	</body>
 </html>
