--- a/dream_vaca/index.html
+++ b/dream_vaca/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <img id="icecream" src="a.png">
-  <div class="title">catch me if you can</div>
+  <div class="title">you want it?</div>
   <script src="jquery-3.2.1.min.js"></script>
   <script src="main.js"></script>
 </body>
